<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="data_grid">Weight Tracking</string>
    <string name="notification_info">Turn on notifications to stay updated on your weight goals.</string>
    <string name="sms_notifications">SMS Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="notification_history">Notification History</string>
    <string name="loading_notification_history">Loading notification history...</string>
    <string name="info_enable_notifications_in_settings">Enable notifications in Settings to start receiving weight reminders and progress updates!</string>
    <string name="current_70_inches_5_10">Current: 70 inches (5\'10\")</string>
</resources>